modif hover head bar

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <br>
                 <label for="comment">Comments:</label><br>
                 <textarea id="comment" placeholder="Enter your comment here"></textarea><br>
-                <input type="submit" value="Submit">
+                <input id="submit"type="submit" value="Submit">
             </form>
              <div id="footer">
             <h4>Copyright ©</h4>
