--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <head>
     <title>Portfolio, About me</title>
     <link rel="stylesheet" type="text/css" href="contact.css">
@@ -35,4 +36,5 @@
              <div id="footer">
             <h4>Copyright ©</h4>
         </div>
-    </body> 
+    </body>
+    </html>
