--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <head>
     <title>Portfolio, About me</title>
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -37,3 +38,4 @@
         <h4>Copyright ©</h4>
     </div>
 </body> 
+</html>
