--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <head>
     <title>Portfolio, About me</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
@@ -33,3 +34,4 @@
                 <h4>Copyright ©</h4>
             </div>
         </body> 
+        </html>
